--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -65,7 +65,7 @@ $RECYCLE.BIN/
 # Logs and databases
 ############################
 
-.tmp
+# .tmp - Lo dejamos para el test
 *.log
 *.sql
 *.sqlite
