--- a/vercel.json
+++ b/vercel.json
@@ -12,7 +12,8 @@
         }
     ],
     "env": {
-        "NODE_ENV": "development",
-        "STRAPI_URL": "/api"
+        "NODE_ENV": "production",
+        "STRAPI_URL": "/api",
+        "VITE_API_URL": "/api"
     }
 }
