--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,26 @@
 {
-    "buildCommand": "cd backend && npm install && npm run build && cd ../frontend && npm install && npm run build",
-    "outputDirectory": "frontend/dist",
-    "rewrites": [
+    "version": 2,
+    "builds": [
         {
-            "source": "/api/(.*)",
-            "destination": "/backend/index.js"
+            "src": "frontend/package.json",
+            "use": "@vercel/static-build",
+            "config": {
+                "distDir": "dist"
+            }
         },
         {
-            "source": "/(.*)",
-            "destination": "/frontend/$1"
+            "src": "backend/index.js",
+            "use": "@vercel/node"
+        }
+    ],
+    "routes": [
+        {
+            "src": "/api/(.*)",
+            "dest": "backend/index.js"
+        },
+        {
+            "src": "/(.*)",
+            "dest": "frontend/dist/$1"
         }
     ],
     "env": {
